[package]
name = "jd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"

[profile.release]
debug = 1

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "lain_mark"
harness = false
